--- a/src/app/components/EmpleadoForm/empleado-form.component.css
+++ b/src/app/components/EmpleadoForm/empleado-form.component.css
@@ -5,7 +5,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.7); 
   justify-content: center;
   align-items: center;
 }
@@ -15,14 +15,44 @@
 }
 
 .modal-content {
-  background: white;
+  background: #333; 
   padding: 20px;
   border-radius: 8px;
   width: 300px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  color: white; 
 }
 
 .close {
   float: right;
   cursor: pointer;
+  color: white; 
+  font-size: 24px; 
+}
+
+form label {
+  display: block;
+  margin-bottom: 10px; 
+  color: white; 
+  font-size: 16px; 
+}
+
+form input {
+  width: 100%;
+  padding: 10px; 
+  margin-bottom: 15px; 
+  border: 1px solid #555; 
+  border-radius: 4px;
+  background-color: #444; 
+  color: white; 
+  font-size: 16px;
+}
+
+form button {
+  padding: 15px 30px; 
+  background-color: #6A0D0D; 
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 16px; 
 }
