--- a/src/app/components/EmpleadoList/empleado-list.component.css
+++ b/src/app/components/EmpleadoList/empleado-list.component.css
@@ -1,10 +1,22 @@
 table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  th, td {
-    padding: 10px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-  }
+  width: 100%;
+  border-collapse: collapse;
+  background-color: #333; 
+  color: white; 
+}
+
+th, td {
+  padding: 15px; 
+  text-align: left;
+  border-bottom: 1px solid #555; 
+}
+
+th {
+  background-color: #6A0D0D; 
+  color: white;
+  font-size: 18px; 
+}
+
+td {
+  font-size: 16px; 
+}
