--- a/src/app/pages/Menu/menu.component.css
+++ b/src/app/pages/Menu/menu.component.css
@@ -34,13 +34,13 @@
 }
 
 .empleados {
-  background-color: #6A0D0D; /* Color rojo oscuro */
+  background-color: #6A0D0D; 
   padding: 20px;
   border-radius: 10px;
 }
 
 .equipos {
-  background-color: #B37700; /* Color amarillo mostaza */
+  background-color: #B37700; 
   padding: 20px;
   border-radius: 10px;
 }
