--- a/src/app/components/EmpleadoForm/empleado-form.component.html
+++ b/src/app/components/EmpleadoForm/empleado-form.component.html
@@ -17,7 +17,7 @@
       <input [(ngModel)]="empleado!.area" name="area" required />
 
       <label>Correo Electrónico:</label>
-      <input type="email" [(ngModel)]="empleado!.correoElectronico" name="correoElectronico" required />
+      <input type="email" [(ngModel)]="empleado!.correo_electronico" name="correoElectronico" required />
 
       <button type="submit">{{ tipo === 'update' ? 'Actualizar' : 'Guardar' }}</button>
     </form>
