--- a/src/app/components/EmpleadoList/empleado-list.component.html
+++ b/src/app/components/EmpleadoList/empleado-list.component.html
@@ -12,7 +12,7 @@
       <td>{{ empleado.nombre }}</td>
       <td>{{ empleado.apellido }}</td>
       <td>{{ empleado.area }}</td>
-      <td>{{ empleado.correoElectronico }}</td>
+      <td>{{ empleado.correo_electronico }}</td>
     </tr>
   </tbody>
 </table>
