--- a/src/app/components/EquiposForm/equipo-form.component.html
+++ b/src/app/components/EquiposForm/equipo-form.component.html
@@ -14,7 +14,7 @@
         <input [(ngModel)]="equipo!.marca" name="marca" required />
   
         <label>Número de Serie:</label>
-        <input [(ngModel)]="equipo!.numeroSerie" name="numeroSerie" required />
+        <input [(ngModel)]="equipo!.numero_serie" name="numeroSerie" required />
   
         <label>Modelo:</label>
         <input [(ngModel)]="equipo!.modelo" name="modelo" required />
