--- a/src/app/components/EquiposList/equipo-list.component.html
+++ b/src/app/components/EquiposList/equipo-list.component.html
@@ -11,7 +11,7 @@
       <tr *ngFor="let equipo of equipos">
         <td>{{ equipo.nombre }}</td>
         <td>{{ equipo.marca }}</td>
-        <td>{{ equipo.numeroSerie }}</td>
+        <td>{{ equipo.numero_serie }}</td>
         <td>{{ equipo.modelo }}</td>
       </tr>
     </tbody>
